Added edit functionality as well as some minor improvements

--- a/encyclopedia/templates/encyclopedia/create.html
+++ b/encyclopedia/templates/encyclopedia/create.html
@@ -12,7 +12,7 @@
         <br>
         <label>Md Content:</label>
         <br>
-        <textarea name="content" id="" cols="20" rows="10" style="height: 176px;"></textarea>
+        <textarea name="content" id="" cols="90" rows="10" style="height: 176px; width: 600px;"></textarea>
         <br>
         <button type="submit" class="btn btn-primary"style="height: 40px; width: 200px;" >Create</button>
 
